# AL_IU8-14_Lab4

./: CMakeLists.txt  README.md  lab04.hpp  main.cpp  t1.cpp  t2.cpp  t3.cpp  t4.cpp  t5.cpp  t6.cpp  t7.cpp  t8.cpp
